# claude-docsmith

./: .gitignore  .gitmodules  ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  TERMS.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: update-docs.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  pr-gate.yml
commands/: update-docs.md
docs/: architecture.md  configuration.md  demo.md  developer-guide.md  publishing.md
docs/screenshots/: README.md
examples/: sample-output.json
src/claude_docsmith/: cli.py  models.py  prompting.py  providers.py  scanner.py
src/claude_docsmith/resources/update-docs/: SKILL.md
src/claude_docsmith/resources/update-docs/templates/: developer-doc-checklist.md  user-doc-checklist.md
tests/: test_cli.py  test_models.py  test_prompting.py  test_providers.py  test_resources.py  test_scanner.py
